--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
-    "name": "policymate",
-    "version": "1.0.0",
-    "scripts": {
-      "start": "vercel dev"
-    },
-    "dependencies": {
-      "express": "^4.18.2",
-      "@vercel/node": "^2.15.3"
-    }
+  "name": "privacy-policy-generator",
+  "version": "1.0.0",
+  "description": "A privacy policy generator with Gemini API integration",
+  "type": "module",
+  "scripts": {
+    "dev": "vercel dev",
+    "build": "vercel build"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "@vercel/node": "^2.15.3",
+    "@google/generative-ai": "^0.2.1"
+  },
+  "devDependencies": {
+    "vercel": "^32.5.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
+}
