--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "vercel-build": "npm install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "vercel-build": "npm install && npm run build"
   },
+ 
   "keywords": [
     "privacy",
     "policy",
