--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,17 @@
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "index.js"
+        "dest": "/index.js"
       },
       {
         "src": "/(.*)",
-        "dest": "public/$1"
+        "dest": "/public/$1"
       }
-    ]
+    ],
+    "functions": {
+      "api/**/*.js": {
+        "memory": 3008,
+        "maxDuration": 30
+      }
+    }
   }
