--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "privacy-policy-generator",
-  "version": "1.0.0",
-  "description": "A web tool to generate privacy policies with Gemini AI",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "vercel-build": "npm install && npm run build"
-  },
- 
-  "keywords": [
-    "privacy",
-    "policy",
-    "generator",
-    "gemini",
-    "api"
-  ],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@google/generative-ai": "^0.8.1",
-    "axios": "^1.6.7",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "html-pdf": "^3.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
-  },
-  "engines": {
-    "node": ">=18.x"
+    "name": "privacy-policy-generator",
+    "version": "1.0.0",
+    "description": "A web tool to generate privacy policies with Gemini AI",
+    "main": "src/index.js",
+    "scripts": {
+      "start": "node src/index.js",
+      "dev": "nodemon src/index.js",
+      "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [
+      "privacy",
+      "policy",
+      "generator",
+      "gemini",
+      "api"
+    ],
+    "author": "",
+    "license": "MIT",
+    "dependencies": {
+      "axios": "^1.6.7",
+      "body-parser": "^1.20.2",
+      "cors": "^2.8.5",
+      "dotenv": "^16.4.1",
+      "express": "^4.18.2",
+      "html-pdf": "^3.0.1"
+    },
+    "devDependencies": {
+      "nodemon": "^3.0.3"
+    }
   }
-}
+
+  
