--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "privacy-policy-generator",
+  "version": "1.0.0",
+  "description": "A web tool to generate privacy policies with Gemini AI",
+  "main": "backend/index.js",
+  "scripts": {
+    "start": "node backend/index.js",
+    "vercel-build": "npm install && npm run build"
+  },
   "dependencies": {
     "axios": "^1.9.0",
     "dotenv": "^16.4.5",
