--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Node
-node_modules/
 
 
 # Env
@@ -8,3 +6,35 @@ node_modules/
 # OS
 .DS_Store
 .vercel
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# Logs
+logs/
+*.log
+
+# Build
+dist/
+build/
+out/
+
+# IDEs
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Misc
+*.local
+*.cache
+*.tmp
+*.swp
+*.swo
+
+# Sensitive files
+.env.*
+!.env.example
